--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ jobs:
     - stage: platform-test
       node_js: "12"
       os: linux
+      arch: arm64
     - stage: platform-test
       node_js: "12"
       os: osx
